syntax = "proto3";
option optimize_for = SPEED;
option go_package = "proto/";

message Command
{
  enum Operation {
    RETAIN = 0;
    LOGOUT = 1;
    JOIN_CHANNEL = 2;
    QUIT_CHANNEL = 3;
    SEND = 4;
    RECEIVE = 5;
    HEARTBEAT = 6;
  }

  Operation operation = 1;
  optional CommandMessage message = 2;
  optional Channel channel = 3;
}

message Channel {
  string channel = 1;
  optional string nick = 2;
}

message CommandMessage {
  string channel = 1;
  string content = 3;
}